# monumental_task

./: README.md  docker-compose.yaml
crane-backend/: .dockerignore  CMakeLists.txt  IK.html  README.md  code_format.sh
crane-backend/config/: robot_config.json
crane-backend/docker/: Dockerfile
crane-backend/src/: CMakeLists.txt  application.cpp  application.h  configuration.h  json_utils.cpp  json_utils.h  kinematics.cpp  kinematics.h  kinematics_if.h  main.cpp  robot_controller.cpp  robot_controller.h  robot_controller_if.h  robot_description.h  robot_interface_if.h  robot_sim.h  server_if.h  timer.h  timer_if.h  velocity_profiler.cpp  velocity_profiler.h  velocity_profiler_if.h  ws_server.cpp  ws_server.h
crane-backend/test/: CMakeLists.txt  assignment_test.cpp
crane-frontend/: .dockerignore  README.md  index.html  package-lock.json  package.json
crane-frontend/docker/: Dockerfile
crane-frontend/src/: application.ts  main.ts  message.ts  robot.ts  robot_configuration.ts  robot_controller.ts  robot_gui.ts  scene.ts  style.css
